--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "start": "node dist/server.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.22",
     "@types/redis": "^4.0.11",
+    "babel-plugin-module-resolver": "^4.1.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
