--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "nalberthy",
   "license": "MIT",
-  "engines": { "node": "16.14.0" },
+  "engines": { "node": "16.14.0", "yarn": "1.22.18" },
   "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
